# SoraWatermarkCleaner

./: .gitignore  README-zh.md  README.md  app.py  example.py  one-click-portable.md  pyproject.toml  requirements.txt  start_server.py
.github/workflows/: sync-upstream.yml
datasets/: make_yolo_images.py
ffmpeg/: README.md
notebooks/: imputation.ipynb
resources/: first_frame.json
sorawm/: configs.py  core.py  watermark_cleaner.py  watermark_detector.py
sorawm/iopaint/: __init__.py  api.py  batch_processing.py  benchmark.py  cli.py  const.py  download.py  helper.py  model_manager.py  runtime.py  schema.py  web_config.py
sorawm/iopaint/file_manager/: file_manager.py  utils.py
sorawm/iopaint/model/: __init__.py  base.py  controlnet.py  ddim_sampler.py  fcf.py  instruct_pix2pix.py  kandinsky.py  lama.py  ldm.py  manga.py  mat.py  mi_gan.py  opencv2.py  paint_by_example.py  plms_sampler.py  sd.py  sdxl.py  utils.py  zits.py
sorawm/iopaint/plugins/: __init__.py  anime_seg.py  base_plugin.py  briarmbg.py  briarmbg2.py  gfpgan_plugin.py  gfpganer.py  interactive_seg.py  realesrgan.py  remove_bg.py  restoreformer.py
sorawm/iopaint/tests/: test_adjust_mask.py  test_anytext.py  test_brushnet.py  test_controlnet.py  test_instruct_pix2pix.py  test_load_img.py  test_low_mem.py  test_match_histograms.py  test_model.py  test_sdxl.py  (+9 more)
sorawm/server/: app.py  db.py  lifespan.py  models.py  router.py  schemas.py  worker.py
sorawm/utils/: devices_utils.py  download_utils.py  imputation_utils.py  video_utils.py  watermark_utls.py
train/: coco8.yaml  eval.py  train.py
(+87 files in other folders)
