[project]
name = "sorawatermarkcleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.108.0",
    "ffmpeg-python>=0.2.0",
    "fire>=0.7.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.204",
    "uvicorn>=0.35.0",
]

